--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,14 @@ cache:
 jdk:
   - oraclejdk8
 
+matrix:
+  include:
+  - env: SBT_VERSION="0.13.18"
+  - env: SBT_VERSION="1.2.8"
+
 script:
   ## This runs the template with the default parameters, and runs test within the templated app.
-  - sbt -Dfile.encoding=UTF8 -J-XX:ReservedCodeCacheSize=256M test
+  - sbt -Dfile.encoding=UTF8 -J-XX:ReservedCodeCacheSize=256M "set g8Properties in g8 in Test ~= { _ ++ Map(\"sbt_version\" -> \"$SBT_VERSION\") }" test
 
   # Tricks to avoid unnecessary cache updates
   - find $HOME/.sbt -name "*.lock" | xargs rm
